# FGVC-PIM

./: .gitignore  eval.py  heat.py  how_to_build_pim_model.ipynb  infer.py  main.py  pyproject.toml  readme.md
configs/: Aircraft_ConvNV1.yaml  Aircraft_SwinT.yaml  Aircraft_SwinT_Mac.yaml  Aircraft_SwinT_Pre.yaml  Bogonet_ConvNV1.yaml  Bogonet_ConvNV1_Pre.yaml  Bogonet_SwinT-B.yaml  Bogonet_SwinT.yaml  Bogonet_SwinT_Pre.yaml  CUB200_ConvNV1.yaml  CUB200_ConvNV1_Pre.yaml  CUB200_SwinT_Pre.yaml  Cars_SwinT.yaml
configs/Public-Benchmark/: Aircraft_ConvNV1_Pre.yaml  Aircraft_SwinT_Pre.yaml  CUB200_SwinT.yaml  CUB200_SwinT_Pre.yaml  Cars_SwinT.yaml  Cars_SwinT_Pre.yaml
data/: dataset.py
models/: builder.py
models/pim_module/: pim_module.py
preprocess/: prep_aircraft.py  prep_cars.py
records/Bogonet-ConvN-DataS/Bogonet-ConvNV1-001-base384-crops_25pct/: Bogonet_ConvNV1.yaml  eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-001/: eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-001-base/: eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-002-small/: eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-003-large/: Bogonet_ConvNV1_Pre.yaml
records/Bogonet-ConvNV1/Bogonet-ConvNV1-004-large-crops_10pct/: Bogonet_ConvNV1.yaml  eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-005-large-crops_0pct/: Bogonet_ConvNV1.yaml  eval_results.txt
records/Bogonet-ConvNV1/Bogonet-ConvNV1-006-base-crops_10pct/: eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-001-base-crops_25pct/: Bogonet_SwinT-B.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-002-base-crops_10pct/: Bogonet_SwinT-B.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-002-square-crops_25pct/: Bogonet_SwinT.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-003-base-crops_0pct/: Bogonet_SwinT-B.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-003-squareAdam-crops_25pct/: Bogonet_SwinT.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-004-squareAdamDrop-crops_25pct/: Bogonet_SwinT.yaml  eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-005-squareAdamDropFreeze-crops_25pct/: eval_results.txt
records/Bogonet-SwinT-B/Bogonet-SwinT-B-006-squareAdamDrop-crops_25pct/: Bogonet_SwinT.yaml  Bogonet_SwinT_Pre_25pct.yaml  eval_results.txt
records/Bogonet-SwinT-Hyper/Bogonet-SwinT-B-Hyper-001-crops_25pct/: eval_results.txt
timm/models/: __init__.py  convnext.py
utils/: config_utils.py  device_utils.py  loss_utils.py  lr_schedule.py
(+44 files in other folders)
