[project]
name = "fgvc-pim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "timm>=1.0.26",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "nvidia-cuda-nvrtc-cu12>=12.0",
    "nvidia-cuda-runtime-cu12>=12.0",
    "nvidia-cuda-cupti-cu12>=12.0",
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cufft-cu12>=12.0",
    "nvidia-curand-cu12>=12.0",
    "nvidia-cusolver-cu12>=12.0",
    "nvidia-cusparse-cu12>=12.0",
    "nvidia-cusparselt-cu12>=0.6",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-nvjitlink-cu12>=12.0",
    "nvidia-nvtx-cu12>=12.0",
    "nvidia-nccl-cu12>=2.20",
    "wandb>=0.26.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
]


